--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "npm": "6.4.1"
+  },
   "scripts": {
     "start": "webpack-dev-server",
     "build": "webpack"
